# production-support-agent-lab

./: .env.example  .gitignore  Dockerfile  README.md  design-qa.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
deploy/prometheus/: support-agent-alerts.yml
docs/: alerting-runbook.md  annotated-trace.md  architecture.md  evaluation-monitoring.md  frontend-console.md  mcp-tools.md  memory-playbook.md  product-design-brief.md  production-deployment.md  production-hardening.md  retrieval-playbook.md  routing-playbook.md  tool-failure-playbook.md  trace-walkthrough.md
examples/evals/: routing_regression.json
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/src/server/: agentApi.ts  signing.ts
frontend/src/shared/: consoleState.ts  ops.ts  types.ts
frontend/test/: agentApiProduction.test.ts  alertDeliveryDispatchRoute.test.ts  alertWebhookReceiptsRoute.test.ts  auditExportBatchRoute.test.ts  auditExportRoute.test.ts  consoleState.test.ts  eventStoreOpsRoute.test.ts  feedbackRoute.test.ts  knowledgeSummaryRoute.test.ts  middleware.test.ts  monitorReviewWorkerRoute.test.ts  operationsAutomationActionRoute.test.ts  operationsAutomationExecutionsRoute.test.ts  ops.test.ts  promotionDecisionRoute.test.ts  signing.test.ts  sloReportRoute.test.ts  snapshotRoute.test.ts
scripts/: knowledge_index_ops.py  run_audit_export_worker.py  run_eval.py  run_monitor_eval.py  run_monitor_review_worker.py  run_retrieval_eval.py
src/support_agent_lab/: bootstrap.py  config.py  models.py
src/support_agent_lab/agent/: orchestrator.py
src/support_agent_lab/api/: auth.py  main.py  metrics.py  rate_limit.py  readiness.py  request_signature.py
src/support_agent_lab/audit/: __init__.py  export.py  export_batch.py
src/support_agent_lab/evals/: monitor_runner.py  (+2 more)
tests/: test_actor_signature.py  test_alert_dispatcher.py  test_alert_webhook_receiver.py  test_api_auth.py  test_audit_export_batch.py  test_eval_runner.py  test_event_store.py  test_event_store_ops_cli.py  test_http_business_tools.py  test_http_knowledge.py  test_mcp_adapter.py  test_metrics.py  test_monitor_review_worker.py  test_monitoring.py  test_orchestrator.py  test_production_config.py  test_prometheus_alert_rules.py  test_rate_limit_backend.py  test_readiness.py  test_release_check.py  test_retrieval_eval_runner.py  test_sqlite_knowledge.py  test_tools.py
(+40 files in other folders)
