[project]
name = "production-support-agent-lab"
version = "0.1.0"
description = "A production-shaped customer support agent lab for agent beginners."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "kiryce" }]
keywords = ["agent", "customer-support", "mcp", "rag", "evaluation", "monitoring", "fastapi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "openai>=2.0.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = [
  "PyYAML>=6.0.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
]
mcp = [
  "mcp>=1.0.0",
]

[project.scripts]
support-agent-eval = "support_agent_lab.evals.runner:main"
support-agent-monitor-eval = "support_agent_lab.evals.monitor_runner:main"
support-agent-retrieval-eval = "support_agent_lab.evals.retrieval_runner:main"
support-agent-demo = "support_agent_lab.scripts.demo_chat:main"
support-agent-sign-headers = "support_agent_lab.scripts.sign_actor_headers:main"
support-agent-release-check = "support_agent_lab.scripts.release_check:main"
support-agent-event-store = "support_agent_lab.scripts.event_store_ops:main"
support-agent-alert-dispatcher = "support_agent_lab.scripts.alert_dispatcher_worker:main"
support-agent-monitor-review-worker = "support_agent_lab.scripts.monitor_review_worker:main"
support-agent-audit-export-worker = "support_agent_lab.scripts.audit_export_worker:main"
support-agent-knowledge-index = "support_agent_lab.scripts.knowledge_index_ops:main"

[project.urls]
Homepage = "https://github.com/kiryce/production-support-agent-lab"
Repository = "https://github.com/kiryce/production-support-agent-lab"
Issues = "https://github.com/kiryce/production-support-agent-lab/issues"
Documentation = "https://github.com/kiryce/production-support-agent-lab#readme"

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
